# multi-app-sam-demo

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
hello_world_1/: app.py
hello_world_2/: app.py
