[tool.poetry]
name = "multi-app-sam-demo"
version = "0.1.0"
description = ""
authors = ["sansmoraxz <31374920+sansmoraxz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"


# common dependencies
[tool.poetry.group.common.dependencies]
boto3 = "^1.29.6"


[tool.poetry.group.datamanip.dependencies]
numpy = "^1.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
